--- a/web/sublink.html
+++ b/web/sublink.html
@@ -1482,7 +1482,7 @@
 
     <div id="donation-button" class="fixed bottom-6 right-6 z-[1000]">
       <a
-        href="https://raw.githubusercontent.com/MarinaAqua/MarinaAqua/main/qr-donate.jpg"
+        href="/qr-code.png"
         target="_blank"
         class="w-12 h-12 rounded-full donation-btn flex items-center justify-center shadow-lg"
       >
